Phase 14d.1: --mode flag for irij build
Add CompileOptions record (HandlerStrategy: THREADED | STATE_MACHINE)
and thread it through IrijCompiler + ClassEmitter.

BuildCommand --mode selects:
  interp             — pre-phase-14 bundled interpreter (default)
  bytecode-threaded  — 14c.2 thread+SynchronousQueue lowering
  bytecode-sm        — 14c.3 state-machine (stub; rejects until implemented)

Accepts `--mode=x` / `--mode x` with synonyms
(threaded/bc-threaded, sm/state-machine).

Bytecode JAR path compiles entry via IrijCompiler, bundles
dev/irij/** runtime classes (sans cli/repl/nrepl/mcp), std/*.irj,
and ASM/gson/toml/ANTLR runtime deps into a self-contained
executable jar with MAIN_CLASS=irij.Program.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>